# nshm-github-actions

./: .gitignore  CLAUDE.md  README.MD  foobar.txt
.github/actions/apiSmokeTest/: README.md  action.yml  package-lock.json  package.json
.github/actions/apiSmokeTest/src/: index.js
.github/actions/python-install/: action.yml
.github/actions/python-install-uv/: action.yml
.github/workflows/: deploy-to-aws-test.yml  deploy-to-aws.yml  python-deploy-docs-test-uv.yml  python-deploy-docs-test.yml  python-deploy-docs-uv.yml  python-deploy-docs.yml  python-install.yml  python-release-test.yml  python-release-uv.yml  python-release.yml  python-run-tests-test-uv.yml  python-run-tests-test.yml  python-run-tests-uv.yml  python-run-tests.yml
samplePythonProject/: CHANGELOG.md  README.md  deploy_check.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
samplePythonProject/docs/: index.md
samplePythonProject/src/theproject/: dummyFile.py
samplePythonProjectUv/: README.md  pyproject.toml
samplePythonProjectUv/docs/: index.md
