[project]
name = "samplepythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Oakley Jurgens",email = "o.jurgens@gns.cri.nz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
tox = "^4.25.0"

