[project]
name = "theproject"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theproject"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "tox>=4.25.0",
    "tox-uv>=1.0.0",
    "tox-gh-actions>=3.0.0",
]
